# test

./: README.md  groundtruth_data.yml  pyproject.toml  requirements.txt  test.py
src/: data.yml  main.py  rules.py  utils.py
